# authzed-rs

./: Cargo.toml  README.md
src/proto/: acl_service.rs  acl_service_grpc.rs  core.rs  namespace.rs  namespace_service.rs  namespace_service_grpc.rs  watch_service.rs  watch_service_grpc.rs
